// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooFormRadioComponent Snapshots Should be disbaled 1`] = `
<yoo-form-radio
  class="hydrated"
  data-yoo-form-radio-host=""
  disabled="true"
>
  
  <div
    class="container"
    data-yoo-form-radio=""
  >
    <div
      attr-layout="row"
      class="icon-container empty disabled"
      data-yoo-form-radio=""
    >
      <div
        class="icon empty"
        data-yoo-form-radio=""
      />
    </div>
    <div
      class="text-container disabled"
      data-yoo-form-radio=""
    >
      
    </div>
  </div>
</yoo-form-radio>
`;

exports[`YooFormRadioComponent Snapshots Should have starting state checked 1`] = `
<yoo-form-radio
  class="accent hydrated"
  data-yoo-form-radio-host=""
  state="checked"
>
  
  <div
    class="container"
    data-yoo-form-radio=""
  >
    <div
      attr-layout="row"
      class="icon-container enabled"
      data-yoo-form-radio=""
    >
      <div
        class="icon"
        data-yoo-form-radio=""
      >
        <i
          class="yo-check"
          data-yoo-form-radio=""
        />
      </div>
    </div>
    <div
      class="text-container enabled"
      data-yoo-form-radio=""
    >
      
    </div>
  </div>
</yoo-form-radio>
`;

exports[`YooFormRadioComponent Snapshots Should have text content 1`] = `
<yoo-form-radio
  class="accent hydrated"
  data-yoo-form-radio-host=""
  text="this is a radio"
>
  
  <div
    class="container"
    data-yoo-form-radio=""
  >
    <div
      attr-layout="row"
      class="icon-container empty enabled"
      data-yoo-form-radio=""
    >
      <div
        class="icon empty"
        data-yoo-form-radio=""
      >
        <i
          class="yo-check"
          data-yoo-form-radio=""
        />
      </div>
    </div>
    <div
      class="text-container enabled"
      data-yoo-form-radio=""
    >
      this is a radio
    </div>
  </div>
</yoo-form-radio>
`;

exports[`YooFormRadioComponent Snapshots Should render 1`] = `
<yoo-form-radio
  class="accent hydrated"
  data-yoo-form-radio-host=""
>
  
  <div
    class="container"
    data-yoo-form-radio=""
  >
    <div
      attr-layout="row"
      class="icon-container empty enabled"
      data-yoo-form-radio=""
    >
      <div
        class="icon empty"
        data-yoo-form-radio=""
      >
        <i
          class="yo-check"
          data-yoo-form-radio=""
        />
      </div>
    </div>
    <div
      class="text-container enabled"
      data-yoo-form-radio=""
    >
      
    </div>
  </div>
</yoo-form-radio>
`;
